test/_generated-libs/undici-types/undici_types/errors/InvalidArgumentError.hx
package undici_types.errors;

/**
	Passed an invalid argument.
**/
@:jsRequire("undici-types", "errors.InvalidArgumentError") extern class InvalidArgumentError extends UndiciError {
	static var prototype : InvalidArgumentError;
}